@@ -18,3 +18,4 @@
    9-Jan-2023  - V0.26 Configuration changes to support tox 4
   22-May-2023  - V0.27 Add retries to tox task for MMseqs2 download
    1-Jul-2024  - V0.28 Update package version with latest setuptools
+  20-Aug-2024  - V0.29 Add 'useTaxonomyCache' argument to control re-downloading of taxonomy data
